feat: Limpieza de codigo y clases, nuevo boton de finalización